[gd_scene load_steps=6 format=2]

[ext_resource path="res://Effects/Background/Background.gd" type="Script" id=1]
[ext_resource path="res://Effects/Background/background-noise.png" type="Texture" id=2]
[ext_resource path="res://Effects/Background/YellowStream.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/DefaultParticle.png" type="Texture" id=4]
[ext_resource path="res://Effects/Background/BigCubes.tscn" type="PackedScene" id=5]

[node name="Background" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Noise" type="Sprite" parent="." index="0"]

z_index = -3
texture = ExtResource( 2 )
centered = false
region_enabled = true
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Pause", "Rect", "Region", "Size Flags", "Theme", "Visibility", "Z Index" ]

[node name="YellowStream" parent="." index="1" instance=ExtResource( 3 )]

z_index = -2

[node name="strobe" type="Light2D" parent="." index="2"]

visible = false
position = Vector2( 695.2, 367.185 )
rotation = -2.28813
scale = Vector2( 125.938, 140.71 )
z_index = -2
enabled = true
editor_only = false
texture = ExtResource( 4 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 2.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Transform" ]

[node name="Cubes_BIG" parent="." index="3" instance=ExtResource( 5 )]

z_index = -2
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Z Index" ]

[node name="Cubes_BIG2" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 1439.29, 558.514 )
z_index = -2
amount = 25

[node name="Cubes_BIG3" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 1437.44, 155.078 )
z_index = -2
amount = 25


